# MPI_Connect_Test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_execute_mpich.sh  client.cpp  server.cpp
run/: job_client.sh  job_client_mpp3.sh  job_server.sh  job_server_mpp3.sh
